# eye_annotation_tool

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  run.py  setup.py
.github/workflows/: publish.yml
ai/: README.md  __init__.py  plugin_interface.py  plugin_manager.py
ai/plugins/: __init__.py
ai/plugins/eyelid_detectors/: __init__.py  placeholder_eyelid_detector.py
ai/plugins/glint_detectors/: threshold_glint_detector.py
ai/plugins/iris_detectors/: __init__.py  placeholder_iris_detector.py
ai/plugins/pupil_detectors/: __init__.py  pupil_core_detector.py  threshold_pupil_detector.py
annotation_app/: __init__.py  main.py
annotation_app/controllers/: __init__.py  annotation_controller.py  navigation_controller.py
annotation_app/gui/: __init__.py  ai_assist_handler.py  annotation_controls.py  custom_widgets.py  image_viewer.py  main_window.py  menu_handler.py  shortcut_handler.py
annotation_app/utils/: __init__.py  annotation_io.py  image_processing.py  settings_handler.py
